--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ rightNavigationButtons:
 heroImage: "dna-dark.jpg"
 heroTitle: "RECOMB-P&E 2025"
 heroSubTitle: "The 2nd RECOMB Satellite Conference on Biomedical Privacy and Equity"
-eventDate: "April 24-25, 2025"
+eventDate: "April 25, 2025"
 eventLocation: "Seoul, South Korea"
 #typeoutTextValues: '"2023"'
 #typeoutFallback: "2023"
